# pypackage-example

./: .buildinfo  .coveragerc  404.html  CHANGELOG.html  CHANGELOG.md  Dockerfile  Makefile  README.md  api.html  default.nix  genindex.html  image.nix  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: CHANGELOG.doctree  api.doctree  environment.pickle  index.doctree  license.doctree
.github/workflows/: docs.yml  main.yml
_sources/: CHANGELOG.md.txt  api.rst.txt
docs/: conf.py
pypackage_example/: __init__.py  __main__.py  version.py
pypackage_example/cli/: __init__.py  cli.py
tests/integration/: test_dummy.py
tests/unit/cli/: test_cli.py
